src/components/ContentSidebar/SidebarSection.scss
@import '../variables';

.bcs-section-content {
    padding: 15px 0 5px;
}

.bcs-section {
    margin: 0 8px 20px 25px;
}

.be .btn-plain.bcs-section-title {
    align-items: center;
    border-bottom: 1px solid $off-white;
    display: flex;
    justify-content: space-between;
    padding: 5px 0 10px;
    text-align: left;
    width: 100%;

    &:active,
    &:focus {
        border-bottom-color: $blue;
        text-decoration: none;

        svg path {
            fill: $twos;
        }
    }

    .icon-caret-down {
        transform: rotateZ(-90deg);
    }
}

.be .bcs-section-open .btn-plain.bcs-section-title .icon-caret-down {
    transform: none;
}

